--- a/site/index.html
+++ b/site/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guild Con 2025 - Hackers Guild Pittsburgh</title>
-    <link rel="stylesheet" href="css/modern-style.css">
-    <link rel="stylesheet" href="css/accessibility.css">
+    <link rel="stylesheet" href="css/modern-style.min.css">
+    <link rel="stylesheet" href="css/accessibility.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
@@ -38,7 +38,10 @@
     <main id="main" role="main">
         <section class="hero">
             <div class="hero-bg">
-                <img src="img/banner.png" alt="Guild Con 2025">
+                <picture>
+                    <source srcset="img/banner.webp" type="image/webp">
+                    <img src="img/banner.jpg" alt="Guild Con 2025">
+                </picture>
             </div>
             <div class="hero-content">
                 <h1 style="font-family: 'Orbitron', monospace; text-transform: uppercase; letter-spacing: 3px;">Guild Con 2025</h1>
@@ -190,6 +193,6 @@
         <div class="a11y-tooltip">Toggle Accessibility Mode</div>
     </button>
     <div id="a11y-announcements" aria-live="polite" aria-atomic="true"></div>
-    <script src="js/modern.js"></script>
+    <script src="js/modern.min.js"></script>
 </body>
 </html>
