--- a/site/countdown.html
+++ b/site/countdown.html
@@ -145,7 +145,7 @@
     <header>
         <nav role="navigation" aria-label="Main navigation">
             <div class="nav-container">
-                <a href="index.html" class="logo">
+                <a href="/" class="logo">
                     <img src="img/logo.png" alt="Hackers Guild PGH">
                     <span>Guild Con 2025</span>
                 </a>
@@ -155,12 +155,12 @@
                     <span></span>
                 </button>
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="cfp.html">CFP</a></li>
-                    <li><a href="talks.html">Talks</a></li>
-                    <li><a href="workshops.html">Workshops</a></li>
-                    <li><a href="ctf.html">CTF</a></li>
-                    <li><a href="sponsors.html">Sponsors</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="cfp">CFP</a></li>
+                    <li><a href="talks">Talks</a></li>
+                    <li><a href="workshops">Workshops</a></li>
+                    <li><a href="ctf">CTF</a></li>
+                    <li><a href="sponsors">Sponsors</a></li>
                 </ul>
             </div>
         </nav>
@@ -195,7 +195,7 @@
                     <h3>Tournament Format</h3>
                     <p>24 Players • 8 Teams • Single Elimination</p>
                     <p>The bracket will be available here once the tournament begins!</p>
-                    <a href="ctf.html" class="btn btn-secondary" style="margin-top: 1rem;">
+                    <a href="ctf" class="btn btn-secondary" style="margin-top: 1rem;">
                         <i class="fas fa-arrow-left"></i> Back to CTF Info
                     </a>
                 </div>
@@ -205,7 +205,7 @@
 
     <footer role="contentinfo">
         <div class="container">
-            <p>&copy; 2025 Hackers Guild Pittsburgh. All rights reserved. | <a href="code-of-conduct.html">Code of Conduct</a> | <a href="accessibility.html">Accessibility</a> | <a href="terms.html">Terms</a> | <a href="privacy.html">Privacy</a> | <a href="photo-policy.html">Photo Policy</a></p>
+            <p>&copy; 2025 Hackers Guild Pittsburgh. All rights reserved. | <a href="code-of-conduct">Code of Conduct</a> | <a href="accessibility">Accessibility</a> | <a href="terms">Terms</a> | <a href="privacy">Privacy</a> | <a href="photo-policy">Photo Policy</a></p>
             <div class="social-links">
                 <span>Follow us:</span>
                 <a href="https://x.com/hackersguildpgh" title="Twitter"><i class="fab fa-twitter"></i></a>
