--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav role="navigation" aria-label="Main navigation">
             <div class="nav-container">
-                <a href="index.html" class="logo">
+                <a href="/" class="logo">
                     <img src="img/logo.png" alt="Hackers Guild PGH">
                     <span>Guild Con 2025</span>
                 </a>
@@ -24,12 +24,12 @@
                     <span></span>
                 </button>
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="cfp.html">CFP</a></li>
-                    <li><a href="talks.html">Talks</a></li>
-                    <li><a href="workshops.html">Workshops</a></li>
-                    <li><a href="ctf.html">CTF</a></li>
-                    <li><a href="sponsors.html">Sponsors</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="cfp">CFP</a></li>
+                    <li><a href="talks">Talks</a></li>
+                    <li><a href="workshops">Workshops</a></li>
+                    <li><a href="ctf">CTF</a></li>
+                    <li><a href="sponsors">Sponsors</a></li>
                 </ul>
             </div>
         </nav>
@@ -49,7 +49,7 @@
                 <p class="date">November 22, 2025 | Pittsburgh, PA</p>
                 <div class="cta-buttons">
                     <a href="https://events.humanitix.com/guildcon" class="btn btn-primary">Register Now</a>
-                    <a href="cfp.html" class="btn btn-secondary">Submit a Talk</a>
+                    <a href="cfp" class="btn btn-secondary">Submit a Talk</a>
                 </div>
             </div>
         </section>
@@ -77,17 +77,17 @@
                     <div class="card">
                         <h3>Technical Talks</h3>
                         <p>Learn from experts sharing cutting-edge security research and techniques</p>
-                        <a href="talks.html" class="link">View Schedule →</a>
+                        <a href="talks" class="link">View Schedule →</a>
                     </div>
                     <div class="card">
                         <h3>Hands-on Workshops</h3>
                         <p>Get practical experience with tools and techniques in small group settings</p>
-                        <a href="workshops.html" class="link">Browse Workshops →</a>
+                        <a href="workshops" class="link">Browse Workshops →</a>
                     </div>
                     <div class="card">
                         <h3>CTF Tournament</h3>
                         <p>24 players, 8 teams, single-elimination bracket. Test your skills!</p>
-                        <a href="ctf.html" class="link">Learn More →</a>
+                        <a href="ctf" class="link">Learn More →</a>
                     </div>
                 </div>
             </div>
@@ -173,7 +173,7 @@
 
     <footer role="contentinfo">
         <div class="container">
-            <p>&copy; 2025 Hackers Guild Pittsburgh. All rights reserved. | <a href="code-of-conduct.html">Code of Conduct</a> | <a href="accessibility.html">Accessibility</a> | <a href="terms.html">Terms</a> | <a href="privacy.html">Privacy</a> | <a href="photo-policy.html">Photo Policy</a></p>
+            <p>&copy; 2025 Hackers Guild Pittsburgh. All rights reserved. | <a href="code-of-conduct">Code of Conduct</a> | <a href="accessibility">Accessibility</a> | <a href="terms">Terms</a> | <a href="privacy">Privacy</a> | <a href="photo-policy">Photo Policy</a></p>
             <div class="social-links">
                 <span>Follow us:</span>
                 <a href="https://x.com/hackersguildpgh" title="Twitter"><i class="fab fa-twitter"></i></a>
