--- a/site/privacy.html
+++ b/site/privacy.html
@@ -14,7 +14,7 @@
     <header>
         <nav role="navigation" aria-label="Main navigation">
             <div class="nav-container">
-                <a href="index.html" class="logo">
+                <a href="/" class="logo">
                     <img src="img/logo.png" alt="Hackers Guild PGH">
                     <span>Guild Con 2025</span>
                 </a>
@@ -24,12 +24,12 @@
                     <span></span>
                 </button>
                 <ul class="nav-links" id="navLinks">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="cfp.html">CFP</a></li>
-                    <li><a href="talks.html">Talks</a></li>
-                    <li><a href="workshops.html">Workshops</a></li>
-                    <li><a href="ctf.html">CTF</a></li>
-                    <li><a href="sponsors.html">Sponsors</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="cfp">CFP</a></li>
+                    <li><a href="talks">Talks</a></li>
+                    <li><a href="workshops">Workshops</a></li>
+                    <li><a href="ctf">CTF</a></li>
+                    <li><a href="sponsors">Sponsors</a></li>
                 </ul>
             </div>
         </nav>
@@ -168,7 +168,7 @@
 
     <footer role="contentinfo">
         <div class="container">
-            <p>&copy; 2025 Hackers Guild Pittsburgh. All rights reserved. | <a href="code-of-conduct.html">Code of Conduct</a> | <a href="accessibility.html">Accessibility</a> | <a href="terms.html">Terms</a> | <a href="privacy.html">Privacy</a> | <a href="photo-policy.html">Photo Policy</a></p>
+            <p>&copy; 2025 Hackers Guild Pittsburgh. All rights reserved. | <a href="code-of-conduct">Code of Conduct</a> | <a href="accessibility">Accessibility</a> | <a href="terms">Terms</a> | <a href="privacy">Privacy</a> | <a href="photo-policy">Photo Policy</a></p>
             <div class="social-links">
                 <span>Follow us:</span>
                 <a href="https://x.com/hackersguildpgh" title="Twitter"><i class="fab fa-twitter"></i></a>
